Fix merge